fix: bump `@storybook/preset-create-react-app` and add it packages missing it
Latest version of `@storybook/preset-create-react-app` fix some issue when working with workspaces

--- a/examples/cra-kitchen-sink/package.json
+++ b/examples/cra-kitchen-sink/package.json
@@ -29,6 +29,7 @@
     "@storybook/addon-storyshots": "6.2.0-alpha.26",
     "@storybook/addons": "6.2.0-alpha.26",
     "@storybook/client-logger": "6.2.0-alpha.26",
+    "@storybook/preset-create-react-app": "^3.1.6-alpha.0",
     "@storybook/react": "6.2.0-alpha.26",
     "@storybook/theming": "6.2.0-alpha.26",
     "react-scripts": "^3.4.4"
