--- a/examples/cra-ts-essentials/package.json
+++ b/examples/cra-ts-essentials/package.json
@@ -36,7 +36,7 @@
   "devDependencies": {
     "@storybook/addon-essentials": "6.2.0-alpha.26",
     "@storybook/addons": "6.2.0-alpha.26",
-    "@storybook/preset-create-react-app": "^3.1.5",
+    "@storybook/preset-create-react-app": "^3.1.6-alpha.0",
     "@storybook/react": "6.2.0-alpha.26"
   },
   "storybook": {
