--- a/examples/cra-ts-kitchen-sink/package.json
+++ b/examples/cra-ts-kitchen-sink/package.json
@@ -40,7 +40,7 @@
     "@storybook/addon-knobs": "6.2.0-alpha.26",
     "@storybook/addon-links": "6.2.0-alpha.26",
     "@storybook/addons": "6.2.0-alpha.26",
-    "@storybook/preset-create-react-app": "^3.1.5",
+    "@storybook/preset-create-react-app": "^3.1.6-alpha.0",
     "@storybook/react": "6.2.0-alpha.26",
     "@types/enzyme": "^3.10.8",
     "enzyme": "^3.11.0",
