--- a/lib/core-server/package.json
+++ b/lib/core-server/package.json
@@ -86,6 +86,7 @@
     "webpack-virtual-modules": "^0.4.1"
   },
   "devDependencies": {
+    "@storybook/builder-webpack5": "6.2.0-alpha.25",
     "@types/case-sensitive-paths-webpack-plugin": "^2.1.4",
     "@types/cpy": "^7.1.3",
     "@types/dotenv-webpack": "^5.0.0",
