--- a/addons/storyshots/storyshots-core/package.json
+++ b/addons/storyshots/storyshots-core/package.json
@@ -43,6 +43,7 @@
     "@storybook/addons": "6.2.0-alpha.25",
     "@storybook/client-api": "6.2.0-alpha.25",
     "@storybook/core": "6.2.0-alpha.25",
+    "@storybook/core-common": "6.2.0-alpha.25",
     "@types/glob": "^7.1.3",
     "@types/jest": "^26.0.16",
     "@types/jest-specific-snapshot": "^0.5.3",
