--- a/lib/core-common/tsconfig.json
+++ b/lib/core-common/tsconfig.json
@@ -1,7 +1,8 @@
 {
   "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "rootDir": "./src"
+    "rootDir": "./src",
+    "types": ["jest", "node"]
   },
   "include": ["src/**/*", "typings.d.ts"],
   "exclude": ["src/**.test.ts"]
