--- a/examples/svelte-kitchen-sink/package.json
+++ b/examples/svelte-kitchen-sink/package.json
@@ -22,7 +22,9 @@
     "@storybook/addon-viewport": "6.2.0-alpha.26",
     "@storybook/addons": "6.2.0-alpha.26",
     "@storybook/source-loader": "6.2.0-alpha.26",
-    "@storybook/svelte": "6.2.0-alpha.26"
+    "@storybook/svelte": "6.2.0-alpha.26",
+    "svelte-jester": "1.3.0",
+    "svelte-preprocess": "4.6.8"
   },
   "storybook": {
     "chromatic": {
