Set svelte as an optional peer dependency

--- a/addons/docs/package.json
+++ b/addons/docs/package.json
@@ -157,6 +157,9 @@
     "react-dom": {
       "optional": true
     },
+    "svelte": {
+      "optional": true
+    },
     "sveltedoc-parser": {
       "optional": true
     },
