--- a/lib/router/package.json
+++ b/lib/router/package.json
@@ -37,6 +37,7 @@
   },
   "dependencies": {
     "@reach/router": "^1.3.4",
+    "@storybook/client-logger": "6.2.0-alpha.25",
     "@types/reach__router": "^1.3.7",
     "core-js": "^3.8.2",
     "global": "^4.4.0",
