--- a/app/angular/package.json
+++ b/app/angular/package.json
@@ -64,7 +64,7 @@
     "ts-loader": "^8.0.14",
     "tsconfig-paths-webpack-plugin": "^3.3.0",
     "util-deprecate": "^1.0.2",
-    "webpack": "^5.9.0"
+    "webpack": "4"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1102.0",
