--- a/app/aurelia/package.json
+++ b/app/aurelia/package.json
@@ -47,7 +47,7 @@
     "read-pkg-up": "^7.0.1",
     "ts-loader": "^8.0.14",
     "url-loader": "^4.1.1",
-    "webpack": "^5.9.0"
+    "webpack": "4"
   },
   "devDependencies": {
     "@types/node": "^14.14.20",
@@ -62,7 +62,7 @@
     "sass-loader": "^11.0.0",
     "style-loader": "^2.0.0",
     "typescript": "^3.9.7",
-    "webpack": "^5.9.0"
+    "webpack": "4"
   },
   "peerDependencies": {
     "aurelia": "*"
