--- a/app/vue3/package.json
+++ b/app/vue3/package.json
@@ -55,7 +55,7 @@
     "ts-loader": "^8.0.14",
     "vue-docgen-api": "^4.34.2",
     "vue-docgen-loader": "^1.5.0",
-    "webpack": "^5.9.0"
+    "webpack": "4"
   },
   "devDependencies": {
     "@types/node": "^14.14.20",
