--- a/examples/aurelia-kitchen-sink/package.json
+++ b/examples/aurelia-kitchen-sink/package.json
@@ -33,6 +33,7 @@
     "@storybook/addon-storysource": "6.2.0-alpha.28",
     "@storybook/addons": "6.2.0-alpha.28",
     "@storybook/aurelia": "6.2.0-alpha.28",
+    "@storybook/builder-webpack4": "6.2.0-alpha.28",
     "@storybook/source-loader": "6.2.0-alpha.28",
     "@types/node": "^14.14.20",
     "css-loader": "^5.0.2",
@@ -45,6 +46,6 @@
     "style-loader": "^2.0.0",
     "ts-loader": "^8.0.15",
     "typescript": "^3.9.7",
-    "webpack": "^5.21.2"
+    "webpack": "^4"
   }
 }
