--- a/examples/cra-ts-kitchen-sink/package.json
+++ b/examples/cra-ts-kitchen-sink/package.json
@@ -30,7 +30,7 @@
     "prop-types": "^15.7.2",
     "react": "16.14.0",
     "react-dom": "16.14.0",
-    "react-scripts": "3.4.4",
+    "react-scripts": "^4.0.2",
     "typescript": "^3.9.7"
   },
   "devDependencies": {
