--- a/app/preact/package.json
+++ b/app/preact/package.json
@@ -44,6 +44,7 @@
     "@babel/plugin-transform-react-jsx": "^7.12.12",
     "@storybook/addons": "6.2.0-alpha.28",
     "@storybook/core": "6.2.0-alpha.28",
+    "@storybook/core-common": "6.2.0-alpha.28",
     "@types/webpack-env": "^1.16.0",
     "core-js": "^3.8.2",
     "global": "^4.4.0",
