--- a/addons/docs/package.json
+++ b/addons/docs/package.json
@@ -125,7 +125,7 @@
     "tslib": "^2.1.0",
     "vue": "^2.6.10",
     "web-component-analyzer": "^1.1.6",
-    "webpack": "^5.21.2",
+    "webpack": "4",
     "zone.js": "^0.11.3"
   },
   "peerDependencies": {
