--- a/addons/graphql/package.json
+++ b/addons/graphql/package.json
@@ -48,7 +48,7 @@
     "graphql": "^15.4.0",
     "prop-types": "^15.7.2",
     "regenerator-runtime": "^0.13.7",
-    "webpack": "^5.9.0"
+    "webpack": "4"
   },
   "peerDependencies": {
     "react": "^16.8.0 || ^17.0.0",
