--- a/examples/marko-cli/package.json
+++ b/examples/marko-cli/package.json
@@ -31,7 +31,7 @@
     "@storybook/marko": "6.2.0-alpha.28",
     "@storybook/source-loader": "6.2.0-alpha.28",
     "prettier": "~2.2.1",
-    "webpack": "^5.9.0"
+    "webpack": "4"
   },
   "storybook": {
     "chromatic": {
