--- a/examples/preact-kitchen-sink/package.json
+++ b/examples/preact-kitchen-sink/package.json
@@ -32,7 +32,7 @@
     "preact-render-to-json": "^3.6.6",
     "raw-loader": "^4.0.2",
     "svg-url-loader": "^7.1.1",
-    "webpack": "^5.9.0",
+    "webpack": "4",
     "webpack-dev-server": "^3.11.2"
   },
   "storybook": {
