--- a/examples/riot-kitchen-sink/package.json
+++ b/examples/riot-kitchen-sink/package.json
@@ -32,7 +32,7 @@
     "raw-loader": "^4.0.2",
     "riot-tag-loader": "^2.1.0",
     "svg-url-loader": "^7.1.1",
-    "webpack": "^5.9.0",
+    "webpack": "4",
     "webpack-dev-server": "^3.11.2"
   },
   "storybook": {
