--- a/examples/vue-kitchen-sink/package.json
+++ b/examples/vue-kitchen-sink/package.json
@@ -35,7 +35,7 @@
     "svg-url-loader": "^7.1.1",
     "vue-loader": "^15.9.6",
     "vue-style-loader": "^4.1.2",
-    "webpack": "^5.9.0",
+    "webpack": "4",
     "webpack-dev-server": "^3.11.2"
   },
   "storybook": {
