--- a/lib/builder-webpack4/package.json
+++ b/lib/builder-webpack4/package.json
@@ -122,7 +122,7 @@
     "ts-dedent": "^2.0.0",
     "url-loader": "^4.1.1",
     "util-deprecate": "^1.0.2",
-    "webpack": "^4.46.0",
+    "webpack": "4",
     "webpack-dev-middleware": "^3.7.3",
     "webpack-filter-warnings-plugin": "^1.2.1",
     "webpack-hot-middleware": "^2.25.0",
