--- a/app/aurelia/package.json
+++ b/app/aurelia/package.json
@@ -36,33 +36,33 @@
   "dependencies": {
     "@aurelia/webpack-loader": "^0.7.0",
     "@storybook/addon-knobs": "6.2.0-alpha.28",
+    "@storybook/core-common": "6.2.0-alpha.28",
     "@storybook/addons": "6.2.0-alpha.28",
     "@storybook/core": "6.2.0-alpha.28",
-    "@storybook/core-common": "6.2.0-alpha.28",
     "@storybook/node-logger": "6.2.0-alpha.28",
-    "fork-ts-checker-webpack-plugin": "^6.0.4",
+    "fork-ts-checker-webpack-plugin": "^4.1.6",
     "global": "^4.4.0",
     "react": "16.14.0",
     "react-dom": "16.14.0",
     "read-pkg-up": "^7.0.1",
-    "ts-loader": "^8.0.14",
+    "ts-loader": "^6.2.2",
     "url-loader": "^4.1.1",
-    "webpack": "4"
+    "webpack": "^4.46.0"
   },
   "devDependencies": {
     "@types/node": "^14.14.20",
     "@types/webpack-env": "^1.16.0",
     "aurelia": "^0.7.0",
-    "css-loader": "^5.0.2",
-    "file-loader": "^6.2.0",
-    "html-webpack-plugin": "^5.0.0",
-    "htmlhint": "^0.14.2",
-    "node-sass": "^5.0.0",
+    "css-loader": "^3.6.0",
+    "file-loader": "^4.3.0",
+    "html-webpack-plugin": "^3.2.0",
+    "htmlhint": "^0.11.0",
+    "node-sass": "^4.14.1",
     "rimraf": "^3.0.2",
-    "sass-loader": "^11.0.0",
-    "style-loader": "^2.0.0",
+    "sass-loader": "^8.0.2",
+    "style-loader": "^0.23.0",
     "typescript": "^3.9.7",
-    "webpack": "4"
+    "webpack": "^4.46.0"
   },
   "peerDependencies": {
     "aurelia": "*"
@@ -70,5 +70,5 @@
   "publishConfig": {
     "access": "public"
   },
-  "gitHead": "899ca0824d698925edcc519c7afc7408f7b1ab46"
+  "gitHead": "66dbae1b4f46f0a654cca2a32410f4654ca48821"
 }
