--- a/app/svelte/package.json
+++ b/app/svelte/package.json
@@ -61,7 +61,7 @@
   "peerDependencies": {
     "@babel/core": "*",
     "svelte": "^3.1.0",
-    "svelte-loader": "^2.9.1"
+    "svelte-loader": "*"
   },
   "engines": {
     "node": ">=10.13.0"
