--- a/lib/core/package.json
+++ b/lib/core/package.json
@@ -40,13 +40,11 @@
     "@storybook/core-server": "6.2.0-alpha.29"
   },
   "peerDependencies": {
-    "@storybook/builder-webpack4": "6.2.0-alpha.29",
-    "@storybook/builder-webpack5": "6.2.0-alpha.29"
+    "@storybook/builder-webpack5": "6.2.0-alpha.29",
+    "react": "^16.8.0 || ^17.0.0",
+    "react-dom": "^16.8.0 || ^17.0.0"
   },
   "peerDependenciesMeta": {
-    "@storybook/builder-webpack4": {
-      "optional": true
-    },
     "@storybook/builder-webpack5": {
       "optional": true
     },
