--- a/lib/builder-webpack4/package.json
+++ b/lib/builder-webpack4/package.json
@@ -58,6 +58,7 @@
     "@babel/preset-react": "^7.12.10",
     "@babel/preset-typescript": "^7.12.7",
     "@storybook/addons": "6.2.0-alpha.29",
+    "@storybook/api": "6.2.0-alpha.29",
     "@storybook/core-common": "6.2.0-alpha.29",
     "@storybook/node-logger": "6.2.0-alpha.29",
     "@storybook/semver": "^7.3.2",
