--- a/lib/builder-webpack5/package.json
+++ b/lib/builder-webpack5/package.json
@@ -58,6 +58,7 @@
     "@babel/preset-typescript": "^7.12.7",
     "@storybook/core-common": "6.2.0-alpha.31",
     "@storybook/node-logger": "6.2.0-alpha.31",
+    "@storybook/semver": "^7.3.2",
     "@storybook/theming": "6.2.0-alpha.31",
     "@types/glob-base": "^0.3.0",
     "@types/html-webpack-plugin": "^3.2.4",
