--- a/lib/builder-webpack4/package.json
+++ b/lib/builder-webpack4/package.json
@@ -59,8 +59,15 @@
     "@babel/preset-typescript": "^7.12.7",
     "@storybook/addons": "6.2.0-alpha.32",
     "@storybook/api": "6.2.0-alpha.32",
+    "@storybook/channel-postmessage": "6.2.0-alpha.32",
+    "@storybook/channels": "6.2.0-alpha.32",
+    "@storybook/client-api": "6.2.0-alpha.32",
+    "@storybook/client-logger": "6.2.0-alpha.32",
+    "@storybook/components": "6.2.0-alpha.32",
     "@storybook/core-common": "6.2.0-alpha.32",
+    "@storybook/core-events": "6.2.0-alpha.32",
     "@storybook/node-logger": "6.2.0-alpha.32",
+    "@storybook/router": "6.2.0-alpha.32",
     "@storybook/semver": "^7.3.2",
     "@storybook/theming": "6.2.0-alpha.32",
     "@storybook/ui": "6.2.0-alpha.32",
