--- a/lib/core-server/package.json
+++ b/lib/core-server/package.json
@@ -39,9 +39,11 @@
   },
   "dependencies": {
     "@babel/core": "^7.12.10",
+    "@babel/plugin-transform-template-literals": "^7.12.1",
     "@babel/preset-react": "^7.12.10",
     "@storybook/addons": "6.2.0-alpha.32",
     "@storybook/builder-webpack4": "6.2.0-alpha.32",
+    "@storybook/core-client": "6.2.0-alpha.32",
     "@storybook/core-common": "6.2.0-alpha.32",
     "@storybook/node-logger": "6.2.0-alpha.32",
     "@storybook/semver": "^7.3.2",
