--- a/lib/core-server/package.json
+++ b/lib/core-server/package.json
@@ -98,7 +98,7 @@
     "@types/terser-webpack-plugin": "^5.0.2",
     "@types/webpack-dev-middleware": "^4.1.0",
     "@types/webpack-virtual-modules": "^0.1.0",
-    "webpack-bundle-analyzer": "^4.3.0"
+    "jest-specific-snapshot": "^4.0.0"
   },
   "peerDependencies": {
     "@storybook/builder-webpack5": "6.2.0-alpha.33",
