--- a/lib/core-server/package.json
+++ b/lib/core-server/package.json
@@ -49,6 +49,7 @@
     "@storybook/ui": "6.2.0-alpha.33",
     "@types/node": "^14.0.10",
     "@types/node-fetch": "^2.5.7",
+    "@types/webpack": "^4.41.26",
     "airbnb-js-shims": "^2.2.1",
     "babel-loader": "^8.2.2",
     "better-opn": "^2.1.1",
@@ -59,16 +60,16 @@
     "commander": "^6.2.1",
     "core-js": "^3.8.2",
     "cpy": "^8.1.1",
-    "css-loader": "^5.0.1",
+    "css-loader": "^3.6.0",
     "detect-port": "^1.3.0",
-    "dotenv-webpack": "^6.0.0",
+    "dotenv-webpack": "^1.8.0",
     "express": "^4.17.1",
     "file-loader": "^6.2.0",
     "file-system-cache": "^1.0.5",
     "find-up": "^5.0.0",
     "fs-extra": "^9.0.1",
     "global": "^4.4.0",
-    "html-webpack-plugin": "^5.0.0",
+    "html-webpack-plugin": "^4.0.0",
     "ip": "^1.1.5",
     "node-fetch": "^2.6.1",
     "pnp-webpack-plugin": "1.6.4",
@@ -78,25 +79,25 @@
     "regenerator-runtime": "^0.13.7",
     "resolve-from": "^5.0.0",
     "serve-favicon": "^2.5.0",
-    "style-loader": "^2.0.0",
+    "style-loader": "^1.3.0",
     "telejson": "^5.1.0",
-    "terser-webpack-plugin": "^5.0.3",
+    "terser-webpack-plugin": "^3.1.0",
     "ts-dedent": "^2.0.0",
     "url-loader": "^4.1.1",
     "util-deprecate": "^1.0.2",
-    "webpack": "^5.9.0",
-    "webpack-dev-middleware": "^4.1.0",
-    "webpack-virtual-modules": "^0.4.1"
+    "webpack": "4",
+    "webpack-dev-middleware": "^3.7.3",
+    "webpack-virtual-modules": "^0.2.2"
   },
   "devDependencies": {
     "@storybook/builder-webpack5": "6.2.0-alpha.33",
     "@types/case-sensitive-paths-webpack-plugin": "^2.1.4",
     "@types/cpy": "^7.1.3",
-    "@types/dotenv-webpack": "^5.0.0",
+    "@types/dotenv-webpack": "^3.0.0",
     "@types/ip": "^1.1.0",
     "@types/serve-favicon": "^2.5.2",
     "@types/terser-webpack-plugin": "^5.0.2",
-    "@types/webpack-dev-middleware": "^4.1.0",
+    "@types/webpack-dev-middleware": "^3.7.3",
     "@types/webpack-virtual-modules": "^0.1.0",
     "jest-specific-snapshot": "^4.0.0"
   },
