--- a/lib/components/package.json
+++ b/lib/components/package.json
@@ -52,7 +52,7 @@
     "overlayscrollbars": "^1.13.1",
     "polished": "^3.6.7",
     "react-color": "^2.19.3",
-    "react-editable-json-tree": "^2.2.1",
+    "react-hotkeys": "^0.10.0",
     "react-popper-tooltip": "^3.1.1",
     "react-syntax-highlighter": "^13.5.3",
     "react-textarea-autosize": "^8.3.0",
