--- a/addons/storyshots/storyshots-puppeteer/package.json
+++ b/addons/storyshots/storyshots-puppeteer/package.json
@@ -49,7 +49,7 @@
     "@types/puppeteer": "^5.4.0"
   },
   "peerDependencies": {
-    "@storybook/addon-storyshots": "6.2.0-alpha.35",
+    "@storybook/addon-storyshots": "6.2.0-beta.0",
     "puppeteer": "^2.0.0 || ^3.0.0"
   },
   "peerDependenciesMeta": {
