--- a/lib/builder-webpack4/package.json
+++ b/lib/builder-webpack4/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@storybook/builder-webpack4",
-  "version": "6.2.0-alpha.35",
+  "version": "6.2.0-beta.0",
   "description": "Storybook framework-agnostic API",
   "keywords": [
     "storybook"
@@ -57,20 +57,20 @@
     "@babel/preset-env": "^7.12.11",
     "@babel/preset-react": "^7.12.10",
     "@babel/preset-typescript": "^7.12.7",
-    "@storybook/addons": "6.2.0-alpha.35",
-    "@storybook/api": "6.2.0-alpha.35",
-    "@storybook/channel-postmessage": "6.2.0-alpha.35",
-    "@storybook/channels": "6.2.0-alpha.35",
-    "@storybook/client-api": "6.2.0-alpha.35",
-    "@storybook/client-logger": "6.2.0-alpha.35",
-    "@storybook/components": "6.2.0-alpha.35",
-    "@storybook/core-common": "6.2.0-alpha.35",
-    "@storybook/core-events": "6.2.0-alpha.35",
-    "@storybook/node-logger": "6.2.0-alpha.35",
-    "@storybook/router": "6.2.0-alpha.35",
+    "@storybook/addons": "6.2.0-beta.0",
+    "@storybook/api": "6.2.0-beta.0",
+    "@storybook/channel-postmessage": "6.2.0-beta.0",
+    "@storybook/channels": "6.2.0-beta.0",
+    "@storybook/client-api": "6.2.0-beta.0",
+    "@storybook/client-logger": "6.2.0-beta.0",
+    "@storybook/components": "6.2.0-beta.0",
+    "@storybook/core-common": "6.2.0-beta.0",
+    "@storybook/core-events": "6.2.0-beta.0",
+    "@storybook/node-logger": "6.2.0-beta.0",
+    "@storybook/router": "6.2.0-beta.0",
     "@storybook/semver": "^7.3.2",
-    "@storybook/theming": "6.2.0-alpha.35",
-    "@storybook/ui": "6.2.0-alpha.35",
+    "@storybook/theming": "6.2.0-beta.0",
+    "@storybook/ui": "6.2.0-beta.0",
     "@types/node": "^14.0.10",
     "@types/webpack": "^4.41.26",
     "autoprefixer": "^9.8.6",
