--- a/addons/docs/package.json
+++ b/addons/docs/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@storybook/addon-docs",
-  "version": "6.2.0-alpha.35",
+  "version": "6.2.0-beta.0",
   "description": "Document component usage and properties in Markdown",
   "keywords": [
     "addon",
@@ -58,19 +58,19 @@
     "@mdx-js/loader": "^1.6.22",
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
-    "@storybook/addons": "6.2.0-alpha.35",
-    "@storybook/api": "6.2.0-alpha.35",
-    "@storybook/builder-webpack4": "6.2.0-alpha.35",
-    "@storybook/client-api": "6.2.0-alpha.35",
-    "@storybook/client-logger": "6.2.0-alpha.35",
-    "@storybook/components": "6.2.0-alpha.35",
-    "@storybook/core": "6.2.0-alpha.35",
-    "@storybook/core-events": "6.2.0-alpha.35",
+    "@storybook/addons": "6.2.0-beta.0",
+    "@storybook/api": "6.2.0-beta.0",
+    "@storybook/builder-webpack4": "6.2.0-beta.0",
+    "@storybook/client-api": "6.2.0-beta.0",
+    "@storybook/client-logger": "6.2.0-beta.0",
+    "@storybook/components": "6.2.0-beta.0",
+    "@storybook/core": "6.2.0-beta.0",
+    "@storybook/core-events": "6.2.0-beta.0",
     "@storybook/csf": "0.0.1",
-    "@storybook/node-logger": "6.2.0-alpha.35",
-    "@storybook/postinstall": "6.2.0-alpha.35",
-    "@storybook/source-loader": "6.2.0-alpha.35",
-    "@storybook/theming": "6.2.0-alpha.35",
+    "@storybook/node-logger": "6.2.0-beta.0",
+    "@storybook/postinstall": "6.2.0-beta.0",
+    "@storybook/source-loader": "6.2.0-beta.0",
+    "@storybook/theming": "6.2.0-beta.0",
     "acorn": "^7.4.1",
     "acorn-jsx": "^5.3.1",
     "acorn-walk": "^7.2.0",
@@ -97,10 +97,10 @@
     "@babel/core": "^7.12.10",
     "@emotion/core": "^10.1.1",
     "@emotion/styled": "^10.0.27",
-    "@storybook/angular": "6.2.0-alpha.35",
-    "@storybook/react": "6.2.0-alpha.35",
-    "@storybook/vue": "6.2.0-alpha.35",
-    "@storybook/web-components": "6.2.0-alpha.35",
+    "@storybook/angular": "6.2.0-beta.0",
+    "@storybook/react": "6.2.0-beta.0",
+    "@storybook/vue": "6.2.0-beta.0",
+    "@storybook/web-components": "6.2.0-beta.0",
     "@types/cross-spawn": "^6.0.2",
     "@types/doctrine": "^0.0.3",
     "@types/enzyme": "^3.10.8",
