--- a/app/preact/package.json
+++ b/app/preact/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@storybook/preact",
-  "version": "6.2.0-alpha.35",
+  "version": "6.2.0-beta.0",
   "description": "Storybook for Preact: Develop Preact Component in isolation.",
   "keywords": [
     "storybook"
@@ -42,9 +42,9 @@
   },
   "dependencies": {
     "@babel/plugin-transform-react-jsx": "^7.12.12",
-    "@storybook/addons": "6.2.0-alpha.35",
-    "@storybook/core": "6.2.0-alpha.35",
-    "@storybook/core-common": "6.2.0-alpha.35",
+    "@storybook/addons": "6.2.0-beta.0",
+    "@storybook/core": "6.2.0-beta.0",
+    "@storybook/core-common": "6.2.0-beta.0",
     "@types/webpack-env": "^1.16.0",
     "core-js": "^3.8.2",
     "global": "^4.4.0",
