--- a/examples/cra-ts-essentials/package.json
+++ b/examples/cra-ts-essentials/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cra-ts-essentials",
-  "version": "6.2.0-alpha.35",
+  "version": "6.2.0-beta.0",
   "private": true,
   "scripts": {
     "build": "react-scripts build",
@@ -34,11 +34,11 @@
     "typescript": "^3.9.7"
   },
   "devDependencies": {
-    "@storybook/addon-essentials": "6.2.0-alpha.35",
-    "@storybook/addons": "6.2.0-alpha.35",
-    "@storybook/builder-webpack4": "6.2.0-alpha.35",
+    "@storybook/addon-essentials": "6.2.0-beta.0",
+    "@storybook/addons": "6.2.0-beta.0",
+    "@storybook/builder-webpack4": "6.2.0-beta.0",
     "@storybook/preset-create-react-app": "^3.1.6-alpha.0",
-    "@storybook/react": "6.2.0-alpha.35",
+    "@storybook/react": "6.2.0-beta.0",
     "webpack": "4"
   },
   "storybook": {
