--- a/lib/api/package.json
+++ b/lib/api/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@storybook/api",
-  "version": "6.2.0-alpha.35",
+  "version": "6.2.0-beta.0",
   "description": "Core Storybook API & Context",
   "keywords": [
     "storybook"
@@ -35,13 +35,13 @@
   },
   "dependencies": {
     "@reach/router": "^1.3.4",
-    "@storybook/channels": "6.2.0-alpha.35",
-    "@storybook/client-logger": "6.2.0-alpha.35",
-    "@storybook/core-events": "6.2.0-alpha.35",
+    "@storybook/channels": "6.2.0-beta.0",
+    "@storybook/client-logger": "6.2.0-beta.0",
+    "@storybook/core-events": "6.2.0-beta.0",
     "@storybook/csf": "0.0.1",
-    "@storybook/router": "6.2.0-alpha.35",
+    "@storybook/router": "6.2.0-beta.0",
     "@storybook/semver": "^7.3.2",
-    "@storybook/theming": "6.2.0-alpha.35",
+    "@storybook/theming": "6.2.0-beta.0",
     "@types/reach__router": "^1.3.7",
     "core-js": "^3.8.2",
     "fast-deep-equal": "^3.1.3",
