--- a/lib/postinstall/package.json
+++ b/lib/postinstall/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@storybook/postinstall",
-  "version": "6.2.0-alpha.35",
+  "version": "6.2.0-beta.0",
   "description": "Storybook addons postinstall utilities",
   "keywords": [
     "api",
