Add back missing dep

--- a/lib/core-server/package.json
+++ b/lib/core-server/package.json
@@ -51,6 +51,7 @@
     "@storybook/ui": "6.2.0-beta.0",
     "@types/node": "^14.0.10",
     "@types/node-fetch": "^2.5.7",
+    "@types/pretty-hrtime": "^1.0.0",
     "@types/webpack": "^4.41.26",
     "airbnb-js-shims": "^2.2.1",
     "babel-loader": "^8.2.2",
@@ -75,6 +76,7 @@
     "ip": "^1.1.5",
     "node-fetch": "^2.6.1",
     "pnp-webpack-plugin": "1.6.4",
+    "pretty-hrtime": "^1.0.3",
     "prompts": "^2.4.0",
     "read-pkg-up": "^7.0.1",
     "regenerator-runtime": "^0.13.7",
