--- a/lib/core-client/package.json
+++ b/lib/core-client/package.json
@@ -46,6 +46,7 @@
     "ansi-to-html": "^0.6.11",
     "core-js": "^3.8.2",
     "global": "^4.4.0",
+    "lodash": "^4.17.20",
     "qs": "^6.9.5",
     "regenerator-runtime": "^0.13.7",
     "ts-dedent": "^2.0.0",
