--- a/lib/router/package.json
+++ b/lib/router/package.json
@@ -42,6 +42,7 @@
     "core-js": "^3.8.2",
     "fast-deep-equal": "^3.1.3",
     "global": "^4.4.0",
+    "lodash": "^4.17.20",
     "memoizerific": "^1.11.3",
     "qs": "^6.9.5"
   },
