--- a/addons/a11y/package.json
+++ b/addons/a11y/package.json
@@ -41,7 +41,6 @@
     "prepare": "node ../../scripts/prepare.js"
   },
   "dependencies": {
-    "@hypnosphi/react-sizeme": "^2.6.13",
     "@storybook/addons": "6.2.0-beta.4",
     "@storybook/api": "6.2.0-beta.4",
     "@storybook/channels": "6.2.0-beta.4",
@@ -54,6 +53,7 @@
     "core-js": "^3.8.2",
     "global": "^4.4.0",
     "lodash": "^4.17.20",
+    "react-sizeme": "^3.0.1",
     "regenerator-runtime": "^0.13.7",
     "ts-dedent": "^2.0.0",
     "util-deprecate": "^1.0.2"
