--- a/addons/jest/package.json
+++ b/addons/jest/package.json
@@ -43,7 +43,6 @@
     "prepare": "node ../../scripts/prepare.js"
   },
   "dependencies": {
-    "@hypnosphi/react-sizeme": "^2.6.13",
     "@storybook/addons": "6.2.0-beta.4",
     "@storybook/api": "6.2.0-beta.4",
     "@storybook/components": "6.2.0-beta.4",
@@ -51,6 +50,7 @@
     "@storybook/theming": "6.2.0-beta.4",
     "core-js": "^3.8.2",
     "global": "^4.4.0",
+    "react-sizeme": "^3.0.1",
     "regenerator-runtime": "^0.13.7",
     "upath": "^1.2.0"
   },
