--- a/lib/ui/package.json
+++ b/lib/ui/package.json
@@ -37,7 +37,6 @@
   },
   "dependencies": {
     "@emotion/core": "^10.1.1",
-    "@hypnosphi/react-sizeme": "^2.6.13",
     "@storybook/addons": "6.2.0-beta.4",
     "@storybook/api": "6.2.0-beta.4",
     "@storybook/channels": "6.2.0-beta.4",
@@ -62,6 +61,7 @@
     "qs": "^6.9.5",
     "react-draggable": "^4.4.3",
     "react-helmet-async": "^1.0.7",
+    "react-sizeme": "^3.0.1",
     "regenerator-runtime": "^0.13.7",
     "resolve-from": "^5.0.0",
     "store2": "^2.12.0"
