--- a/addons/controls/package.json
+++ b/addons/controls/package.json
@@ -44,6 +44,7 @@
     "@storybook/addons": "6.2.0-beta.5",
     "@storybook/api": "6.2.0-beta.5",
     "@storybook/client-api": "6.2.0-beta.5",
+    "@storybook/client-logger": "6.2.0-beta.5",
     "@storybook/components": "6.2.0-beta.5",
     "@storybook/node-logger": "6.2.0-beta.5",
     "@storybook/theming": "6.2.0-beta.5",
