--- a/lib/router/package.json
+++ b/lib/router/package.json
@@ -44,7 +44,8 @@
     "global": "^4.4.0",
     "lodash": "^4.17.20",
     "memoizerific": "^1.11.3",
-    "qs": "^6.9.5"
+    "qs": "^6.9.5",
+    "ts-dedent": "^2.0.0"
   },
   "peerDependencies": {
     "react": "^16.8.0 || ^17.0.0",
