--- a/lib/core-server/package.json
+++ b/lib/core-server/package.json
@@ -41,6 +41,7 @@
     "@babel/core": "^7.12.10",
     "@babel/plugin-transform-template-literals": "^7.12.1",
     "@babel/preset-react": "^7.12.10",
+    "@babel/register": "^7.12.1",
     "@storybook/addons": "6.2.0-beta.8",
     "@storybook/builder-webpack4": "6.2.0-beta.8",
     "@storybook/core-client": "6.2.0-beta.8",
