--- a/lib/core-common/package.json
+++ b/lib/core-common/package.json
@@ -56,6 +56,7 @@
     "@babel/preset-env": "^7.12.11",
     "@babel/preset-react": "^7.12.10",
     "@babel/preset-typescript": "^7.12.7",
+    "@babel/register": "^7.12.1",
     "@storybook/node-logger": "6.2.0-beta.12",
     "@types/glob-base": "^0.3.0",
     "@types/micromatch": "^4.0.1",
