--- a/lib/source-loader/package.json
+++ b/lib/source-loader/package.json
@@ -46,8 +46,7 @@
     "loader-utils": "^2.0.0",
     "lodash": "^4.17.20",
     "prettier": "~2.2.1",
-    "regenerator-runtime": "^0.13.7",
-    "source-map": "^0.7.3"
+    "regenerator-runtime": "^0.13.7"
   },
   "peerDependencies": {
     "react": "^16.8.0 || ^17.0.0",
