--- a/lib/core-server/package.json
+++ b/lib/core-server/package.json
@@ -105,7 +105,7 @@
     "jest-specific-snapshot": "^4.0.0"
   },
   "peerDependencies": {
-    "@storybook/builder-webpack5": "6.2.0-beta.15",
+    "@storybook/builder-webpack5": "6.2.0-rc.0",
     "react": "^16.8.0 || ^17.0.0",
     "react-dom": "^16.8.0 || ^17.0.0"
   },
