--- a/addons/a11y/package.json
+++ b/addons/a11y/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@storybook/addon-a11y",
-  "version": "6.2.0-beta.15",
+  "version": "6.2.0-rc.0",
   "description": "Test component compliance with web accessibility standards",
   "keywords": [
     "a11y",
@@ -41,14 +41,14 @@
     "prepare": "node ../../scripts/prepare.js"
   },
   "dependencies": {
-    "@storybook/addons": "6.2.0-beta.15",
-    "@storybook/api": "6.2.0-beta.15",
-    "@storybook/channels": "6.2.0-beta.15",
-    "@storybook/client-api": "6.2.0-beta.15",
-    "@storybook/client-logger": "6.2.0-beta.15",
-    "@storybook/components": "6.2.0-beta.15",
-    "@storybook/core-events": "6.2.0-beta.15",
-    "@storybook/theming": "6.2.0-beta.15",
+    "@storybook/addons": "6.2.0-rc.0",
+    "@storybook/api": "6.2.0-rc.0",
+    "@storybook/channels": "6.2.0-rc.0",
+    "@storybook/client-api": "6.2.0-rc.0",
+    "@storybook/client-logger": "6.2.0-rc.0",
+    "@storybook/components": "6.2.0-rc.0",
+    "@storybook/core-events": "6.2.0-rc.0",
+    "@storybook/theming": "6.2.0-rc.0",
     "axe-core": "^4.1.1",
     "core-js": "^3.8.2",
     "global": "^4.4.0",
