--- a/addons/events/package.json
+++ b/addons/events/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@storybook/addon-events",
-  "version": "6.2.0-beta.15",
+  "version": "6.2.0-rc.0",
   "description": "Add events to your Storybook stories.",
   "keywords": [
     "addon",
@@ -39,11 +39,11 @@
     "prepare": "node ../../scripts/prepare.js"
   },
   "dependencies": {
-    "@storybook/addons": "6.2.0-beta.15",
-    "@storybook/api": "6.2.0-beta.15",
-    "@storybook/client-api": "6.2.0-beta.15",
-    "@storybook/core-events": "6.2.0-beta.15",
-    "@storybook/theming": "6.2.0-beta.15",
+    "@storybook/addons": "6.2.0-rc.0",
+    "@storybook/api": "6.2.0-rc.0",
+    "@storybook/client-api": "6.2.0-rc.0",
+    "@storybook/core-events": "6.2.0-rc.0",
+    "@storybook/theming": "6.2.0-rc.0",
     "core-js": "^3.8.2",
     "format-json": "^1.0.3",
     "lodash": "^4.17.20",
