--- a/addons/jest/package.json
+++ b/addons/jest/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@storybook/addon-jest",
-  "version": "6.2.0-beta.15",
+  "version": "6.2.0-rc.0",
   "description": "React storybook addon that show component jest report",
   "keywords": [
     "addon",
@@ -43,11 +43,11 @@
     "prepare": "node ../../scripts/prepare.js"
   },
   "dependencies": {
-    "@storybook/addons": "6.2.0-beta.15",
-    "@storybook/api": "6.2.0-beta.15",
-    "@storybook/components": "6.2.0-beta.15",
-    "@storybook/core-events": "6.2.0-beta.15",
-    "@storybook/theming": "6.2.0-beta.15",
+    "@storybook/addons": "6.2.0-rc.0",
+    "@storybook/api": "6.2.0-rc.0",
+    "@storybook/components": "6.2.0-rc.0",
+    "@storybook/core-events": "6.2.0-rc.0",
+    "@storybook/theming": "6.2.0-rc.0",
     "core-js": "^3.8.2",
     "global": "^4.4.0",
     "react-sizeme": "^3.0.1",
