--- a/addons/storyshots/storyshots-core/package.json
+++ b/addons/storyshots/storyshots-core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@storybook/addon-storyshots",
-  "version": "6.2.0-beta.15",
+  "version": "6.2.0-rc.0",
   "description": "Take a code snapshot of every story automatically with Jest",
   "keywords": [
     "addon",
@@ -41,10 +41,10 @@
   },
   "dependencies": {
     "@jest/transform": "^26.6.2",
-    "@storybook/addons": "6.2.0-beta.15",
-    "@storybook/client-api": "6.2.0-beta.15",
-    "@storybook/core": "6.2.0-beta.15",
-    "@storybook/core-common": "6.2.0-beta.15",
+    "@storybook/addons": "6.2.0-rc.0",
+    "@storybook/client-api": "6.2.0-rc.0",
+    "@storybook/core": "6.2.0-rc.0",
+    "@storybook/core-common": "6.2.0-rc.0",
     "@types/glob": "^7.1.3",
     "@types/jest": "^26.0.16",
     "@types/jest-specific-snapshot": "^0.5.3",
@@ -62,11 +62,11 @@
   "devDependencies": {
     "@angular/core": "^11.2.0",
     "@angular/platform-browser-dynamic": "^11.2.0",
-    "@storybook/addon-docs": "6.2.0-beta.15",
-    "@storybook/angular": "6.2.0-beta.15",
-    "@storybook/react": "6.2.0-beta.15",
-    "@storybook/vue": "6.2.0-beta.15",
-    "@storybook/vue3": "6.2.0-beta.15",
+    "@storybook/addon-docs": "6.2.0-rc.0",
+    "@storybook/angular": "6.2.0-rc.0",
+    "@storybook/react": "6.2.0-rc.0",
+    "@storybook/vue": "6.2.0-rc.0",
+    "@storybook/vue3": "6.2.0-rc.0",
     "babel-loader": "^8.2.2",
     "enzyme": "^3.11.0",
     "enzyme-to-json": "^3.6.1",
