--- a/addons/toolbars/package.json
+++ b/addons/toolbars/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@storybook/addon-toolbars",
-  "version": "6.2.0-beta.15",
+  "version": "6.2.0-rc.0",
   "description": "Create your own toolbar items that control story rendering",
   "keywords": [
     "addon",
@@ -41,10 +41,10 @@
     "prepare": "node ../../scripts/prepare.js"
   },
   "dependencies": {
-    "@storybook/addons": "6.2.0-beta.15",
-    "@storybook/api": "6.2.0-beta.15",
-    "@storybook/client-api": "6.2.0-beta.15",
-    "@storybook/components": "6.2.0-beta.15",
+    "@storybook/addons": "6.2.0-rc.0",
+    "@storybook/api": "6.2.0-rc.0",
+    "@storybook/client-api": "6.2.0-rc.0",
+    "@storybook/components": "6.2.0-rc.0",
     "core-js": "^3.8.2"
   },
   "peerDependencies": {
