--- a/app/riot/package.json
+++ b/app/riot/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@storybook/riot",
-  "version": "6.2.0-beta.15",
+  "version": "6.2.0-rc.0",
   "description": "Storybook for riot.js: View riot snippets in isolation with Hot Reloading.",
   "keywords": [
     "storybook"
@@ -42,8 +42,8 @@
     "prepare": "node ../../scripts/prepare.js"
   },
   "dependencies": {
-    "@storybook/core": "6.2.0-beta.15",
-    "@storybook/core-common": "6.2.0-beta.15",
+    "@storybook/core": "6.2.0-rc.0",
+    "@storybook/core-common": "6.2.0-rc.0",
     "core-js": "^3.8.2",
     "global": "^4.4.0",
     "raw-loader": "^4.0.2",
