--- a/app/svelte/package.json
+++ b/app/svelte/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@storybook/svelte",
-  "version": "6.2.0-beta.15",
+  "version": "6.2.0-rc.0",
   "description": "Storybook for Svelte: Develop Svelte Component in isolation with Hot Reloading.",
   "keywords": [
     "storybook"
@@ -41,9 +41,9 @@
     "prepare": "node ../../scripts/prepare.js"
   },
   "dependencies": {
-    "@storybook/addons": "6.2.0-beta.15",
-    "@storybook/core": "6.2.0-beta.15",
-    "@storybook/core-common": "6.2.0-beta.15",
+    "@storybook/addons": "6.2.0-rc.0",
+    "@storybook/core": "6.2.0-rc.0",
+    "@storybook/core-common": "6.2.0-rc.0",
     "core-js": "^3.8.2",
     "global": "^4.4.0",
     "react": "16.14.0",
