--- a/examples/html-kitchen-sink/package.json
+++ b/examples/html-kitchen-sink/package.json
@@ -1,6 +1,6 @@
 {
   "name": "html-kitchen-sink",
-  "version": "6.2.0-beta.15",
+  "version": "6.2.0-rc.0",
   "private": true,
   "description": "",
   "keywords": [],
@@ -13,25 +13,25 @@
     "storybook": "start-storybook -p 9006"
   },
   "devDependencies": {
-    "@storybook/addon-a11y": "6.2.0-beta.15",
-    "@storybook/addon-actions": "6.2.0-beta.15",
-    "@storybook/addon-backgrounds": "6.2.0-beta.15",
-    "@storybook/addon-controls": "6.2.0-beta.15",
-    "@storybook/addon-docs": "6.2.0-beta.15",
-    "@storybook/addon-events": "6.2.0-beta.15",
-    "@storybook/addon-jest": "6.2.0-beta.15",
-    "@storybook/addon-knobs": "6.2.0-beta.15",
-    "@storybook/addon-links": "6.2.0-beta.15",
+    "@storybook/addon-a11y": "6.2.0-rc.0",
+    "@storybook/addon-actions": "6.2.0-rc.0",
+    "@storybook/addon-backgrounds": "6.2.0-rc.0",
+    "@storybook/addon-controls": "6.2.0-rc.0",
+    "@storybook/addon-docs": "6.2.0-rc.0",
+    "@storybook/addon-events": "6.2.0-rc.0",
+    "@storybook/addon-jest": "6.2.0-rc.0",
+    "@storybook/addon-knobs": "6.2.0-rc.0",
+    "@storybook/addon-links": "6.2.0-rc.0",
     "@storybook/addon-postcss": "^2.0.0",
-    "@storybook/addon-storyshots": "6.2.0-beta.15",
-    "@storybook/addon-storysource": "6.2.0-beta.15",
-    "@storybook/addon-viewport": "6.2.0-beta.15",
-    "@storybook/addons": "6.2.0-beta.15",
-    "@storybook/client-api": "6.2.0-beta.15",
-    "@storybook/core": "6.2.0-beta.15",
-    "@storybook/core-events": "6.2.0-beta.15",
-    "@storybook/html": "6.2.0-beta.15",
-    "@storybook/source-loader": "6.2.0-beta.15",
+    "@storybook/addon-storyshots": "6.2.0-rc.0",
+    "@storybook/addon-storysource": "6.2.0-rc.0",
+    "@storybook/addon-viewport": "6.2.0-rc.0",
+    "@storybook/addons": "6.2.0-rc.0",
+    "@storybook/client-api": "6.2.0-rc.0",
+    "@storybook/core": "6.2.0-rc.0",
+    "@storybook/core-events": "6.2.0-rc.0",
+    "@storybook/html": "6.2.0-rc.0",
+    "@storybook/source-loader": "6.2.0-rc.0",
     "autoprefixer": "^10.0.1",
     "eventemitter3": "^4.0.7",
     "format-json": "^1.0.3",
