--- a/examples/riot-kitchen-sink/package.json
+++ b/examples/riot-kitchen-sink/package.json
@@ -1,6 +1,6 @@
 {
   "name": "riot-example",
-  "version": "6.2.0-beta.15",
+  "version": "6.2.0-rc.0",
   "private": true,
   "scripts": {
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules",
@@ -15,17 +15,17 @@
   },
   "devDependencies": {
     "@babel/core": "^7.12.10",
-    "@storybook/addon-a11y": "6.2.0-beta.15",
-    "@storybook/addon-actions": "6.2.0-beta.15",
-    "@storybook/addon-backgrounds": "6.2.0-beta.15",
-    "@storybook/addon-knobs": "6.2.0-beta.15",
-    "@storybook/addon-links": "6.2.0-beta.15",
-    "@storybook/addon-storyshots": "6.2.0-beta.15",
-    "@storybook/addon-storysource": "6.2.0-beta.15",
-    "@storybook/addon-viewport": "6.2.0-beta.15",
-    "@storybook/addons": "6.2.0-beta.15",
-    "@storybook/riot": "6.2.0-beta.15",
-    "@storybook/source-loader": "6.2.0-beta.15",
+    "@storybook/addon-a11y": "6.2.0-rc.0",
+    "@storybook/addon-actions": "6.2.0-rc.0",
+    "@storybook/addon-backgrounds": "6.2.0-rc.0",
+    "@storybook/addon-knobs": "6.2.0-rc.0",
+    "@storybook/addon-links": "6.2.0-rc.0",
+    "@storybook/addon-storyshots": "6.2.0-rc.0",
+    "@storybook/addon-storysource": "6.2.0-rc.0",
+    "@storybook/addon-viewport": "6.2.0-rc.0",
+    "@storybook/addons": "6.2.0-rc.0",
+    "@storybook/riot": "6.2.0-rc.0",
+    "@storybook/source-loader": "6.2.0-rc.0",
     "babel-loader": "^8.2.2",
     "cross-env": "^7.0.3",
     "file-loader": "^6.2.0",
