--- a/examples/vue-cli/package.json
+++ b/examples/vue-cli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue-cli-example",
-  "version": "6.2.0-beta.15",
+  "version": "6.2.0-rc.0",
   "private": true,
   "scripts": {
     "build": "vue-cli-service build",
@@ -15,11 +15,11 @@
     "vue-property-decorator": "^9.1.2"
   },
   "devDependencies": {
-    "@storybook/addon-controls": "6.2.0-beta.15",
-    "@storybook/addon-essentials": "6.2.0-beta.15",
+    "@storybook/addon-controls": "6.2.0-rc.0",
+    "@storybook/addon-essentials": "6.2.0-rc.0",
     "@storybook/preset-scss": "^1.0.3",
-    "@storybook/source-loader": "6.2.0-beta.15",
-    "@storybook/vue": "6.2.0-beta.15",
+    "@storybook/source-loader": "6.2.0-rc.0",
+    "@storybook/vue": "6.2.0-rc.0",
     "@vue/cli-plugin-babel": "~4.3.1",
     "@vue/cli-plugin-typescript": "~4.3.1",
     "@vue/cli-service": "~4.3.1",
