--- a/lib/builder-webpack5/package.json
+++ b/lib/builder-webpack5/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@storybook/builder-webpack5",
-  "version": "6.2.0-beta.15",
+  "version": "6.2.0-rc.0",
   "description": "Storybook framework-agnostic API",
   "keywords": [
     "storybook"
@@ -56,19 +56,19 @@
     "@babel/preset-env": "^7.12.11",
     "@babel/preset-react": "^7.12.10",
     "@babel/preset-typescript": "^7.12.7",
-    "@storybook/addons": "6.2.0-beta.15",
-    "@storybook/api": "6.2.0-beta.15",
-    "@storybook/channel-postmessage": "6.2.0-beta.15",
-    "@storybook/channels": "6.2.0-beta.15",
-    "@storybook/client-api": "6.2.0-beta.15",
-    "@storybook/client-logger": "6.2.0-beta.15",
-    "@storybook/components": "6.2.0-beta.15",
-    "@storybook/core-common": "6.2.0-beta.15",
-    "@storybook/core-events": "6.2.0-beta.15",
-    "@storybook/node-logger": "6.2.0-beta.15",
-    "@storybook/router": "6.2.0-beta.15",
+    "@storybook/addons": "6.2.0-rc.0",
+    "@storybook/api": "6.2.0-rc.0",
+    "@storybook/channel-postmessage": "6.2.0-rc.0",
+    "@storybook/channels": "6.2.0-rc.0",
+    "@storybook/client-api": "6.2.0-rc.0",
+    "@storybook/client-logger": "6.2.0-rc.0",
+    "@storybook/components": "6.2.0-rc.0",
+    "@storybook/core-common": "6.2.0-rc.0",
+    "@storybook/core-events": "6.2.0-rc.0",
+    "@storybook/node-logger": "6.2.0-rc.0",
+    "@storybook/router": "6.2.0-rc.0",
     "@storybook/semver": "^7.3.2",
-    "@storybook/theming": "6.2.0-beta.15",
+    "@storybook/theming": "6.2.0-rc.0",
     "@types/node": "^14.0.10",
     "babel-loader": "^8.2.2",
     "babel-plugin-macros": "^3.0.1",
