--- a/lib/components/package.json
+++ b/lib/components/package.json
@@ -41,7 +41,6 @@
     "@storybook/csf": "0.0.1",
     "@storybook/theming": "6.2.0-rc.1",
     "@types/overlayscrollbars": "^1.12.0",
-    "@types/react-color": "^3.0.4",
     "@types/react-syntax-highlighter": "11.0.5",
     "core-js": "^3.8.2",
     "fast-deep-equal": "^3.1.3",
@@ -52,7 +51,7 @@
     "overlayscrollbars": "^1.13.1",
     "polished": "^4.0.5",
     "prop-types": "^15.7.2",
-    "react-color": "^2.19.3",
+    "react-colorful": "^5.0.1",
     "react-popper-tooltip": "^3.1.1",
     "react-syntax-highlighter": "^13.5.3",
     "react-textarea-autosize": "^8.3.0",
