--- a/addons/controls/package.json
+++ b/addons/controls/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@storybook/addon-controls",
-  "version": "6.2.0-rc.13",
+  "version": "6.2.0",
   "description": "Interact with component inputs dynamically in the Storybook UI",
   "keywords": [
     "addon",
@@ -41,12 +41,12 @@
     "prepare": "node ../../scripts/prepare.js"
   },
   "dependencies": {
-    "@storybook/addons": "6.2.0-rc.13",
-    "@storybook/api": "6.2.0-rc.13",
-    "@storybook/client-api": "6.2.0-rc.13",
-    "@storybook/components": "6.2.0-rc.13",
-    "@storybook/node-logger": "6.2.0-rc.13",
-    "@storybook/theming": "6.2.0-rc.13",
+    "@storybook/addons": "6.2.0",
+    "@storybook/api": "6.2.0",
+    "@storybook/client-api": "6.2.0",
+    "@storybook/components": "6.2.0",
+    "@storybook/node-logger": "6.2.0",
+    "@storybook/theming": "6.2.0",
     "core-js": "^3.8.2",
     "ts-dedent": "^2.0.0"
   },
