--- a/addons/cssresources/package.json
+++ b/addons/cssresources/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@storybook/addon-cssresources",
-  "version": "6.2.0-rc.13",
+  "version": "6.2.0",
   "description": "A storybook addon to switch between css resources at runtime for your story",
   "keywords": [
     "addon",
@@ -40,11 +40,11 @@
     "prepare": "node ../../scripts/prepare.js"
   },
   "dependencies": {
-    "@storybook/addons": "6.2.0-rc.13",
-    "@storybook/api": "6.2.0-rc.13",
-    "@storybook/components": "6.2.0-rc.13",
-    "@storybook/core-events": "6.2.0-rc.13",
-    "@storybook/theming": "6.2.0-rc.13",
+    "@storybook/addons": "6.2.0",
+    "@storybook/api": "6.2.0",
+    "@storybook/components": "6.2.0",
+    "@storybook/core-events": "6.2.0",
+    "@storybook/theming": "6.2.0",
     "core-js": "^3.8.2",
     "global": "^4.4.0",
     "regenerator-runtime": "^0.13.7"
