--- a/app/marionette/package.json
+++ b/app/marionette/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@storybook/marionette",
-  "version": "6.2.0-rc.13",
+  "version": "6.2.0",
   "description": "Storybook for Marionette: Develop Marionette.js component in isolation with Hot Reloading.",
   "keywords": [
     "storybook"
@@ -34,8 +34,8 @@
     "prepare": "node ../../scripts/prepare.js"
   },
   "dependencies": {
-    "@storybook/core": "6.2.0-rc.13",
-    "@storybook/core-common": "6.2.0-rc.13",
+    "@storybook/core": "6.2.0",
+    "@storybook/core-common": "6.2.0",
     "common-tags": "^1.8.0",
     "core-js": "^3.8.2",
     "global": "^4.4.0",
