--- a/lib/components/package.json
+++ b/lib/components/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@storybook/components",
-  "version": "6.2.0-rc.13",
+  "version": "6.2.0",
   "description": "Core Storybook Components",
   "keywords": [
     "storybook"
@@ -37,9 +37,9 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.6.0",
-    "@storybook/client-logger": "6.2.0-rc.13",
+    "@storybook/client-logger": "6.2.0",
     "@storybook/csf": "0.0.1",
-    "@storybook/theming": "6.2.0-rc.13",
+    "@storybook/theming": "6.2.0",
     "@types/color-convert": "^2.0.0",
     "@types/overlayscrollbars": "^1.12.0",
     "@types/react-syntax-highlighter": "11.0.5",
