--- a/lib/core-server/package.json
+++ b/lib/core-server/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@storybook/core-server",
-  "version": "6.2.0-rc.13",
+  "version": "6.2.0",
   "description": "Storybook framework-agnostic API",
   "keywords": [
     "storybook"
@@ -41,14 +41,14 @@
     "@babel/core": "^7.12.10",
     "@babel/plugin-transform-template-literals": "^7.12.1",
     "@babel/preset-react": "^7.12.10",
-    "@storybook/addons": "6.2.0-rc.13",
-    "@storybook/builder-webpack4": "6.2.0-rc.13",
-    "@storybook/core-client": "6.2.0-rc.13",
-    "@storybook/core-common": "6.2.0-rc.13",
-    "@storybook/node-logger": "6.2.0-rc.13",
+    "@storybook/addons": "6.2.0",
+    "@storybook/builder-webpack4": "6.2.0",
+    "@storybook/core-client": "6.2.0",
+    "@storybook/core-common": "6.2.0",
+    "@storybook/node-logger": "6.2.0",
     "@storybook/semver": "^7.3.2",
-    "@storybook/theming": "6.2.0-rc.13",
-    "@storybook/ui": "6.2.0-rc.13",
+    "@storybook/theming": "6.2.0",
+    "@storybook/ui": "6.2.0",
     "@types/node": "^14.0.10",
     "@types/node-fetch": "^2.5.7",
     "@types/pretty-hrtime": "^1.0.0",
@@ -93,7 +93,7 @@
     "webpack-virtual-modules": "^0.2.2"
   },
   "devDependencies": {
-    "@storybook/builder-webpack5": "6.2.0-rc.13",
+    "@storybook/builder-webpack5": "6.2.0",
     "@types/case-sensitive-paths-webpack-plugin": "^2.1.4",
     "@types/cpy": "^7.1.3",
     "@types/dotenv-webpack": "^3.0.0",
