--- a/lib/ui/package.json
+++ b/lib/ui/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@storybook/ui",
-  "version": "6.2.0-rc.13",
+  "version": "6.2.0",
   "description": "Core Storybook UI",
   "keywords": [
     "storybook"
@@ -37,15 +37,15 @@
   },
   "dependencies": {
     "@emotion/core": "^10.1.1",
-    "@storybook/addons": "6.2.0-rc.13",
-    "@storybook/api": "6.2.0-rc.13",
-    "@storybook/channels": "6.2.0-rc.13",
-    "@storybook/client-logger": "6.2.0-rc.13",
-    "@storybook/components": "6.2.0-rc.13",
-    "@storybook/core-events": "6.2.0-rc.13",
-    "@storybook/router": "6.2.0-rc.13",
+    "@storybook/addons": "6.2.0",
+    "@storybook/api": "6.2.0",
+    "@storybook/channels": "6.2.0",
+    "@storybook/client-logger": "6.2.0",
+    "@storybook/components": "6.2.0",
+    "@storybook/core-events": "6.2.0",
+    "@storybook/router": "6.2.0",
     "@storybook/semver": "^7.3.2",
-    "@storybook/theming": "6.2.0-rc.13",
+    "@storybook/theming": "6.2.0",
     "@types/markdown-to-jsx": "^6.11.3",
     "copy-to-clipboard": "^3.3.1",
     "core-js": "^3.8.2",
